# someip

./: CMakeLists.txt  main.cpp
implementation/message/include/: message_base_impl.hpp  message_header_impl.hpp
implementation/message/src/: message_header_impl.cpp
implementation/utility/inclucde/: byteorder.hpp
